[gd_scene load_steps=11 format=3 uid="uid://cvcsdkjpwr3wa"]

[ext_resource type="Script" uid="uid://dyyiebn250vjg" path="res://entities/objects/buttons/floor_button.gd" id="1_8viui"]
[ext_resource type="Texture2D" uid="uid://bag032juxe70g" path="res://assets/sprites/objects/buttom_pressed.png" id="1_nllud"]
[ext_resource type="Texture2D" uid="uid://wl6jjuxlb6js" path="res://assets/sprites/objects/buttom.png" id="2_8viui"]
[ext_resource type="PackedScene" uid="uid://bdhst7l51m64h" path="res://entities/controllers/audio_controller/audio_controller.tscn" id="4_2s7co"]
[ext_resource type="AudioStream" uid="uid://d005iesuln7b5" path="res://assets/sounds/sfx/others/button-pressed.wav" id="5_21nr6"]
[ext_resource type="PackedScene" uid="uid://c124cocjpi4gk" path="res://entities/others/connection_entity/activator.tscn" id="6_sguv4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tc5ia"]
atlas = ExtResource("1_nllud")
region = Rect2(0, 0, 16, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s7co"]
atlas = ExtResource("2_8viui")
region = Rect2(0, 0, 16, 4)

[sub_resource type="SpriteFrames" id="SpriteFrames_21nr6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc5ia")
}],
"loop": true,
"name": &"pressed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s7co")
}],
"loop": true,
"name": &"unpressed",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tc5ia"]
size = Vector2(12, 3)

[node name="FloorButton" type="StaticBody2D"]
collision_layer = 16
collision_mask = 309
script = ExtResource("1_8viui")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_21nr6")
animation = &"unpressed"

[node name="LargeCollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-8, 2, -4, -2, 4, -2, 8, 2)

[node name="SmallCollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-8, 2, -5, -1, 5, -1, 8, 2)

[node name="PressZone" type="Area2D" parent="."]
position = Vector2(0, -3)
collision_layer = 0
collision_mask = 21

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressZone"]
position = Vector2(0, -0.55)
shape = SubResource("RectangleShape2D_tc5ia")

[node name="AudioController" parent="." instance=ExtResource("4_2s7co")]

[node name="Pressed" type="AudioStreamPlayer2D" parent="AudioController"]
stream = ExtResource("5_21nr6")
max_distance = 250.0
bus = &"SFX"

[node name="Activator" parent="." instance=ExtResource("6_sguv4")]

[connection signal="body_entered" from="PressZone" to="." method="_on_press_zone_body_entered"]
